Projects/Basics/Shopsphere-Ecommerce/K8s_5_With_RBAC/_8_Network_Polocies/_4b_allow-backend-policy.yaml
# Allow backend to receive from frontend and talk to mongo
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-frontend-and-mongo
  namespace: shopsphere
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 5000
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: mongo
    ports:
    - protocol: TCP
      port: 27017
